--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
+    "pug": "^3.0.0",
     "socket.io": "^2.3.0"
   }
 }
