--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
     "pug": "^3.0.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "validate-color": "^2.1.0"
   }
 }
