--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "odraw",
   "version": "1.0.0",
-  "description": "",
+  "description": "A drawing application that allows you to mockup pictures live with other people!",
   "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eoriont/odraw.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -10,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
